# huffman-coding

./: .gitignore  README.md  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: code-quality.yaml
src/: binary_code.py  compressor.py  counter.py  hello.py  huffman_tree.py  priority_queue.py
src/compressor/: __init__.py  bytes_utils.py  data_utils.py  main.py  types.py
tests/: test_binary_code.py  test_compressor.py  test_counter.py  test_hello.py  test_huffman_tree.py  test_priority_queue.py
