[project]
name = "huffman-coding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
     {name = "Noé Tatoud", email = "noe.tatoud@gmail.com"},
]
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[dependency-groups]
dev = [
    "pyright>=1.1.387",
    "ruff>=0.7.2",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
]
